--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,12 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     //implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.firebase:firebase-client-android:2.5.2'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
 }
