--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.firebase:firebase-client-android:2.5.2'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
