--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
+
 //apply plugin: 'com.google.gms.google-services'
 
 android {
@@ -53,4 +54,5 @@ dependencies {
     implementation 'com.firebase:firebase-client-android:2.5.2'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
 }
