Change architecture of Schedule fragment to View <-> ViewModel <-> Model

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
             android:theme="@style/AppTheme">
 
         <activity
-                android:name=".Login.LoginActivity"
+                android:name=".login.LoginActivity"
                 android:label="@string/title_activity_login">
         </activity>
-        <activity android:name=".Login.RegistrationActivity">
+        <activity android:name=".login.RegistrationActivity">
         </activity>
         <activity
                 android:name=".MainActivity"
