- MainActivity changed (nav drawer, first fragment) - Added CComment, CommentsRecyclerAdapter, list_item_comment - Changed Vitos amazing EventActivity pls dont kill me

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.confapp">
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
@@ -14,11 +22,25 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key"/>
+
         <activity
                 android:name=".event.EventScrollingActivity"
                 android:label="@string/title_activity_event_scrolling"
                 android:theme="@style/AppTheme.NoActionBar">
-                <!--android:parentActivityName=".MainActivity">-->
+
+            <!-- android:parentActivityName=".MainActivity"> -->
         </activity>
         <activity
                 android:name=".login.LoginActivity"
@@ -40,17 +62,17 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".user.UserProfileActivity"
-            android:theme="@style/AppTheme.popupwindow"
-        ></activity>
+        <activity
+                android:name=".user.UserProfileActivity"
+                android:theme="@style/AppTheme.popupwindow"/>
 
         <receiver
                 android:name=".event.notification.AlarmReceiver"
-                android:enabled="true" >
+                android:enabled="true">
             <intent-filter>
-                <action android:name="android.media.action.DISPLAY_NOTIFICATION" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.media.action.DISPLAY_NOTIFICATION"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
 
@@ -58,7 +80,6 @@
                 android:name=".event.notification.EventNotificationService"
                 android:enabled="true"
                 android:permission="android.permission.BIND_JOB_SERVICE"/>
-
     </application>
 
 </manifest>
