--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     //implementation 'com.android.support:exifinterface:28.0.0'
     //implementation 'com.android.support:customtabs:28.0.0'
@@ -65,4 +66,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
     //implementation 'com.wdullaer:materialdatetimepicker:4.1.2'
+
+    implementation 'com.airbnb.android:lottie:2.6.0'
 }
