--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     //implementation 'com.wdullaer:materialdatetimepicker:4.1.2'
 
     implementation 'com.airbnb.android:lottie:2.6.0'
+
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
 }
