--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,15 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
             android:allowBackup="true"
@@ -33,7 +36,13 @@
         -->
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
-                android:value="matea did a doo doo"/>
+                android:value="@string/maps_api_key"/>
+
+
+        <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version" />
+
 
         <activity
                 android:name=".event.EventScrollingActivity"
@@ -65,6 +74,7 @@
         <activity
                 android:name=".user.UserProfileActivity"
                 android:theme="@style/AppTheme.popupwindow"/>
+        <activity android:name=".gmaps.GMapsActivity"/>
 
         <receiver
                 android:name=".event.notification.AlarmReceiver"
